src/objects/StudentDisposition__c.object
<CustomObject>
    <description>Contains information about student disposition concerns. This object contains sensitive student information and should only be available to a limited number of profiles.</description>
    <fields>
        <fullName>AreaOfConcern__c</fullName>
        <label>Area Of Concern</label>
        <picklist>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentence fluency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caring and considerate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affirming of diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reflective practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equitable and fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belief all students can learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technologically proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Behavior and Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern about PCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern about DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern about Practicum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern about passing of courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absences in DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWS/ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Describe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Provision #9</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AssessmentName__c</fullName>
        <label>Assessment Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>TaskStreamAssessment__c</referenceTo>
        <relationshipLabel>Student Concerns</relationshipLabel>
        <relationshipName>StudentConcerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedDate__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssignedTime__c</fullName>
        <formula>ROUND(8*(
(5*FLOOR((DATEVALUE(ResolvedDate__c)-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(ResolvedDate__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(ResolvedDate__c-DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(AssignedDate__c)-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(AssignedDate__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(AssignedDate__c-DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1)))
))
), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business hours between Assigned Date to Resolved Date</inlineHelpText>
        <label>Assigned Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentConcerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWECompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CWE Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>StudentDispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeofConductPrimarySanction__c</fullName>
        <label>Code of Conduct Primary Sanction</label>
        <picklist>
            <picklistValues>
                <fullName>Disciplinary Expulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Expulsion from Academic Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissal of Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation of Admission and/or Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CodeofConductStatus__c</fullName>
        <label>Code of Conduct Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed for Student Conduct Board Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by Student Conduct Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConcernType__c</fullName>
        <description>Record types available</description>
        <label>Concern Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Authenticity/Originality Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articulation Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT and Business Disposition Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing College Disposition Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College Disposition Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College Field Concern (Practicum, DT or PCE)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactedByCollege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted By College</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateOfSubmissionIntoTaskstream__c</fullName>
        <description>Date field that indicates the date the student submitted their task in Taskstream.</description>
        <label>Date of Submission into Taskstream</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Submitter&apos;s Department</description>
        <inlineHelpText>Submitter&apos;s Department</inlineHelpText>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluator__c</fullName>
        <label>Evaluator</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailNumber__c</fullName>
        <description>Total failed attempts on a given task logged by the submitter.</description>
        <inlineHelpText>Total failed attempts on a given task logged by the submitter.</inlineHelpText>
        <label>Fail Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldExperience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Experience</label>
        <referenceTo>FieldExperience__c</referenceTo>
        <relationshipName>StudentDispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormAreaOfConcern__c</fullName>
        <label>Form Area Of Concern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighestOverallSimilarity__c</fullName>
        <formula>IF(RevisedOverallSimilarity__c  &gt;  OverallSimilarity__c, RevisedOverallSimilarity__c , OverallSimilarity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Overall Similarity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HighestTopIndividual__c</fullName>
        <formula>IF(RevisedTopIndividual__c &gt;=  TopIndividual__c, RevisedTopIndividual__c, TopIndividual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Top Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvestigationStartDate__c</fullName>
        <label>Investigation Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvestigationTime__c</fullName>
        <formula>ROUND(8*( 
(5*FLOOR((DATEVALUE(ResolvedDate__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(ResolvedDate__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(ResolvedDate__c-DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(InvestigationStartDate__c )-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(InvestigationStartDate__c )-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(InvestigationStartDate__c -DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1))) 
)) 
), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business hours between Investigation Start Date and Resolution Date</inlineHelpText>
        <label>Investigation Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueSubType__c</fullName>
        <label>Issue Sub-Type</label>
        <picklist>
            <controllingField>TypeOfIssue__c</controllingField>
            <picklistValues>
                <fullName>Requirements Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Originality Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proctored Exam Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal for 3rd Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal to Repeat DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preappeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-HT Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-CS Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT personal issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violation of State Nurse Practice Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission of or conviction for a felony or misdemeanor offense, including DUI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Act of abuse (physical or emotional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Act of cruelty or patient endangerment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committing or soliciting any unlawful sexual act or committing any act of sexual harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soliciting, encouraging or consummating a romantic or inappropriate relationship with a patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnishing alcohol or illegal/unauthorized drugs to any patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encouraging, promoting, extolling, or supporting any illegal, unethical, inappropriate, or dangerous activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falsifying, deliberately misrepresenting, or omitting professional qualifications when applying for enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falsifying, deliberately misrepresenting, or omitting information in patient care documentation/medical records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falsifying, deliberately misrepresenting, or omitting reasons for absences or leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soliciting the purchase of any item or service in a private remunerative capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepting gifts for personal use or gain where there may be the appearance of a conflict of interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Providing nursing care outside of WGU scheduled while representing self as WGU nursing student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MatchDetail__c</fullName>
        <description>Open text field used to explain who (which student) the match was to.</description>
        <label>Match Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Comments__c</fullName>
        <label>Match Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <label>Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MentorName__c</fullName>
        <label>Mentor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyConcerns__c</fullName>
        <formula>IF($User.PIDM__c =  AssignedTo__r.PIDM__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Concerns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallSimilarity__c</fullName>
        <label>Overall Similarity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReasonForConcern__c</fullName>
        <label>Reason For Concern</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferralResolutionPath__c</fullName>
        <formula>TEXT(Referral__r.ResolutionPath__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Resolution Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Code of Conduct Referral</description>
        <label>Referral</label>
        <referenceTo>CodeofConductReferral__c</referenceTo>
        <relationshipLabel>Student Concerns</relationshipLabel>
        <relationshipName>Student_Concerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolutionTime__c</fullName>
        <description>Business hours between the creation of the record and its resolution</description>
        <formula>ROUND(8*(
(5*FLOOR((DATEVALUE(ResolvedDate__c)-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(ResolvedDate__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(ResolvedDate__c-DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(CreatedDate )-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(CreatedDate )-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(CreatedDate -DATETIMEVALUE(&apos;1996-01-01 14:00:00&apos;), 1)))
))
), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business hours between the creation of the record and its resolution</inlineHelpText>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Action not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Evaluated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content removed DMCA takedown notice sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWE Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1—Warning Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1—Warning with remediation plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2—Corrective action to SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2—Disciplinary probation to SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: conditional continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: removal from program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3—Corrective action to SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3—Removal from nursing program to SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No warning issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed – Not WGU content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Investigation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RevisedOverallSimilarity__c</fullName>
        <label>Revised Overall Similarity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevisedTopIndividual__c</fullName>
        <label>Revised Top Individual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCBPrimarySanction__c</fullName>
        <formula>TEXT(Referral__r.CodeofConductPrimarySanction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCB Primary Sanction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCBStatus__c</fullName>
        <description>Formula field that brings over the status of the code of conduct referral.</description>
        <formula>TEXT(Referral__r.Status__c)</formula>
        <label>SCB Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendAACWEEmail__c</fullName>
        <description>Link for sending AA CWE email template to student and mentor</description>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;template_id=00Xa0000001j4WC&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/icon/mail24.png&quot;,&quot;Send CWE Email&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link for sending AA CWE email template to student and mentor</inlineHelpText>
        <label>Send AA CWE Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendAASubmissionReviewEmail__c</fullName>
        <description>Link for sending AA Submission Review email template to student and mentor</description>
        <formula>CASE( upper( StudentCollege__c ),
     &quot;TC&quot;, 
          HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;p5=teachersuccess@wgu.edu&amp;template_id=00Xa0000001j4Vx&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/icon/contracts24.png&quot;,&quot;Send Subumission Review Email&quot;),&quot;_self&quot;),
     &quot;HE&quot;,
          HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;p5=juliet.kolde@wgu.edu&amp;template_id=00Xa0000001j4Vx&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/icon/contracts24.png&quot;,&quot;Send Submission Review Email&quot;),&quot;_self&quot;),
     HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;template_id=00Xa0000001j4Vx&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/icon/contracts24.png&quot;,&quot;Send Submission Review Email&quot;),&quot;_self&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link for sending AA Submission Review email template to student and mentor</inlineHelpText>
        <label>Send AA Submission Review Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendAAWarningEmail__c</fullName>
        <description>Link for sending AA Warning email template to student and mentor</description>
        <formula>CASE( upper( StudentCollege__c ),
     &quot;TC&quot;, 
          HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;p5=teachersuccess@wgu.edu&amp;template_id=00Xa0000001j439&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/msg_icons/warning24.png&quot;,&quot;Send Warning Email&quot;),&quot;_self&quot;),
     &quot;HE&quot;,
          HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;p5=juliet.kolde@wgu.edu&amp;template_id=00Xa0000001j439&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/msg_icons/warning24.png&quot;,&quot;Send Warning Email&quot;),&quot;_self&quot;),
     HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p26=noreply.originality@wgu.edu&amp;p2_lkid=&quot; &amp; Student__r.Id &amp; &quot;&amp;p3_lkid=&quot; &amp; Id &amp; &quot;&amp;p4=&quot; &amp; MentorEmail__c &amp; &quot;&amp;template_id=00Xa0000001j439&amp;rtype=003&amp;retURL=%2F&quot; &amp; Id,IMAGE(&quot;/img/msg_icons/warning24.png&quot;,&quot;Send Warning Email&quot;),&quot;_self&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link for sending AA Warning email template to student and mentor</inlineHelpText>
        <label>Send AA Warning Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecificEvidence__c</fullName>
        <label>Specific Evidence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG Evaluation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Student Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: WGU Response Needed / In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Additional Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Submission Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Student Conduct Board Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentCollege__c</fullName>
        <inlineHelpText>Student College at the time the Concern was created</inlineHelpText>
        <label>Student College</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>Student Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentProgram__c</fullName>
        <inlineHelpText>Student Program at the time the Concern was created</inlineHelpText>
        <label>Student Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentState__c</fullName>
        <formula>Student__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Concerns</relationshipLabel>
        <relationshipName>StudentDispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <label>Submitted By</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-WGU Affiliated Complainant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Staff Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prinicipal/Asst. Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>